<resources>
    <string name="app_name">MemoCard</string>
    <string name="welcome">welcome !</string>
    <string name="flashcard_title">Flashcards</string>
    <string name="quiz_title">Quizzes</string>
    <string name="login">Login</string>
    <string name="question">QUESTION</string>
    <string name="answer">ANSWER</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_question">Do you have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="log_in">Login</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log Out</string>
    <string name="motto">Learn anything you want here!</string>
    <string name="add_new_flashcard">Add new flashcard</string>

    <!--  Navigation bar  -->
    <string name="nav_download">Download</string>
    <string name="nav_library">Library</string>
    <string name="nav_user">User</string>

    <!--  Image description -->
    <string name="icon_delete">Delete</string>
    <string name="icon_deck">Deck\'s amount</string>
    <string name="icon_date">Last modified date</string>
    <string name="icon_email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="this_username_already_exist">This username already exist!</string>
    <string name="signed_up_successfully">Signed up successfully!\n</string>
    <string name="you_can_return_to_home_screen">You can return to home screen to login now</string>
    <string name="error_adding_to_database">"Error adding to database: "</string>
    <string name="error_checking_username">"Error checking username: "</string>
    <string name="username_too_short">Username too short! It must be at least 6 characters!</string>
    <string name="password_too_short">Password too short! It must be at least 8 characters!</string>
    <string name="password_confirmation_unmatched">Password confirmation unmatched!</string>
    <string name="ipsum_quia_dolor_sit_amet">ipsum quia dolor sit amet?</string>
    <string name="add_new_card">add new card</string>
    <string name="deck_name">Deck name</string>
    <string name="delete_deck">Delete deck</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>

    <!--  Deck's review -->
    <string name="flip">Flip</string>
    <string name="last_evaluation">Last evaluation:</string>

    <!-- Deck Edit   -->
    <string name="new_deck">New Deck</string>
    <string name="your_question">Your question</string>
    <string name="your_answer">Your answer</string>
    <string name="_00x"># 00x</string>

</resources>