<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--        android:background="@drawable/orange_blue_gradient">-->

        <androidx.cardview.widget.CardView
            android:id="@+id/appNameCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/app_name"
                android:textSize="40sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/mottoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appNameCardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/motto"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>


        <TextView
            android:id="@+id/haveAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mottoTextView"
            android:layout_marginTop="180dp"
            android:layout_centerHorizontal="true"
            android:text="@string/login_question"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/loginOptionsLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/haveAccountTitle"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logInButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/default_button_state_list"
                android:text="@string/log_in"
                android:textSize="16sp"
                android:maxLines="1"
                android:layout_marginHorizontal="40dp"
                android:onClick="loginButtonClick"
                android:layout_weight="5"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/default_button_state_list"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:maxLines="1"
                android:layout_marginHorizontal="40dp"
                android:onClick="signUpButtonClick"
                android:layout_weight="5"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/tdtuLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:src="@drawable/tdtu_logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/userInfoCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mottoTextView"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            app:cardElevation="10dp"
            app:cardCornerRadius="15dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/welcomeUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"/>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@id/userInfoCardView"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/log_out"
            android:background="@drawable/default_button_state_list"
            android:layout_weight="3"
            android:visibility="invisible"
            android:onClick="logoutButtonClick"/>

    </RelativeLayout>

</FrameLayout>