<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/log_in"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_stroke_background"
        android:layout_below="@id/loginTitle"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/usernameTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/username"
                android:textSize="18sp"
                android:layout_weight="4"/>

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:inputType="text"
                android:background="@drawable/edit_text_border"
                android:textCursorDrawable="@drawable/text_cursor"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:textSize="17sp"
                android:maxLength="18"
                android:paddingLeft="3dp"
                android:layout_weight="7"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameLayout"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/passwordTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/password"
                android:textSize="18sp"
                android:layout_weight="4"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxBackgroundMode="none"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:padding="0dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="0dp"
                    android:background="@drawable/edit_text_border"
                    android:textCursorDrawable="@drawable/text_cursor"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:textSize="17sp"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayout"
        android:layout_marginTop="120dp"
        android:text="@string/confirm"
        android:layout_centerHorizontal="true"
        android:onClick="logInConfirmButtonClick"/>

</RelativeLayout>