<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    style="?attr/materialCardViewElevatedStyle"
    app:cardElevation="3dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:padding="1dp"
            app:strokeWidth="2dp"
            app:strokeColor="?attr/colorOutline"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                style="@style/TextAppearance.Material3.TitleSmall"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/outline_alternate_email_24"
                    android:contentDescription="@string/icon_email"/>

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/email_icon"
                    android:layout_toStartOf="@id/date_icon"
                    android:layout_marginEnd="8dp"
                    android:layout_centerVertical="true"
                    style="@style/TextAppearance.Material3.BodySmall"/>

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/date"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/outline_date_range_24"
                    android:contentDescription="@string/icon_date"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    style="@style/TextAppearance.Material3.BodySmall"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/deck_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/outline_style_24"
                    android:contentDescription="@string/icon_deck"/>

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/deck_icon"
                    style="@style/TextAppearance.Material3.BodySmall"/>

            </RelativeLayout>

            <ImageView
                android:id="@+id/action_delete_deck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/icon_delete"/>

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>